--- a/app/manifest.json
+++ b/app/manifest.json
@@ -4,7 +4,7 @@
   "start_url": "/",
   "display": "standalone",
   "orientation": "portrait",
-  "background_color": "#fff",
+  "background_color": "#323232",
   "theme_color": "#673ab8",
   "icons": [{
     "src": "/assets/icon.png",
