--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "axios": "^0.16.2",
+    "dedupe": "^2.1.0",
     "eslint": "^4.5.0",
     "eslint-config-synacor": "^1.1.0",
     "if-env": "^1.0.0",
+    "jsdom": "^11.2.0",
     "node-sass": "^4.5.3",
     "preact-cli": "^1.4.1",
     "sass-loader": "^6.0.6"
